# glottal-inverse

./: .color_coded  .gdbinit  .gitignore  .plot.py  .ycm_extra_conf.py  CMakeLists.txt  J-9.tgz  LICENSE  Makefile  README.md  build-android-arm.sh  build-android-arm64.sh  build-linux-x86_64.sh  cmake_install.cmake  compile_commands.json  deps.txt  est_liveplot.gnu  glottal-inverse.sln  glottal-inverse.vcxproj  glottal-inverse.vcxproj.filters  glottal_phases.plist  lpc_coeffs.plist  lpc_residual.plist  main.py  make-gif.sh  make-pre.sh  plot.py  plot.sh  requirements.txt  scriptforaws
cunit/lib/: libcunit.la  libcunit.so.1.0.1
inc/: amgif.h  ann_oq.h  audio.h  audio_be_file.h  audio_be_oboe.h  audio_be_soundio.h  audio_in.h  basis.h  constants.h  derivative.h  dijkstra.h  dijkstra_impl.h  dyprog_lf.h  ekf.h  filter.h  filter_design.h  formants.h  gci_dypsa.h  gci_pd.h  gci_sedreams.h  gci_yaga.h  gci_yaga_subroutines.h  gcoi_sigma.h  gcoi_sigma_subs.h  glottal.h  glottal_phases.h  gnuplot.h  gsl_util.h  hwt.h  iaif.h  interp_sample.h  k_shortest.h  k_shortest_impl.h  lf_fitting.h  linalg.h  lpc.h  normalize.h  operator_c.h  operators.h  operators_buffer.h  (+14 more)
mini_aplawd/: as05c1.txt  aw15d4.txt  aw47e2.txt
src/: amgif.cpp  amgif.cpp~  basis.cpp  compress_c.cpp  convolute.cpp  coordinates.cpp  derivative.cpp  filter.cpp  filter_butter.cpp  filter_hp_butterworth.cpp  filter_hp_simple.cpp  filter_lp_simple.cpp  formants.cpp  glottal.cpp  glottal_phases.cpp  gnuplot.cpp  hanning.cpp  hwt_transform.cpp  iaif.cpp  integrate.cpp  interp_sample.cpp  linalg.cpp  linalg_utils.cpp  lpc_coeffs.cpp  lpc_conv.cpp  lpc_maxpresidual.cpp  lpc_residual.cpp  main.c  main.cpp  main_precomp.cpp  normalize.cpp  operator_c.cpp  operator_l.cpp  persist_c.cpp  poly.cpp  precomp_main.cpp  print_iter.cpp  projection.cpp  record_callback.cpp  record_stream.cpp  (+10 more)
src/ann-oq/: model.cpp~
src/audio/: callback_overflow.cpp  callback_read.cpp  decoders.cpp  destroy.cpp  has_window.cpp  init.cpp  load_window.cpp  pause.cpp  start.cpp
src/dyprog_lf/: correct_gci_glot.cpp  distitar.cpp  dyprog_lf.cpp  get_spec_stat.cpp
src/filter/: butter_ap.cpp  design_bilinear.cpp  design_ss2tf.cpp  design_tf2ss.cpp  design_transforms.cpp  design_zpk2ss.cpp  design_zpk2tf.cpp
src/gci_dypsa/: dypsa.cpp  exgrdel.cpp  negzerocros.cpp
src/gci_pd/: fft.cpp  gci_pd.cpp  phase_diff.cpp  reduce_vti.cpp  remove_dc.cpp  select_peaks.cpp  sym_signal.cpp  teager.cpp
src/gci_sedreams/: findpeaks.cpp  median.cpp  sedreams.cpp  zerocrossings.cpp
src/gci_yaga/: cost_CP.cpp  (+22 more)
tests/: main.c
(+82 files in other folders)
